@@ -35,7 +35,6 @@ import java.lang.reflect.Constructor;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import javax.swing.BorderFactory;
 import javax.swing.BoxLayout;
@@ -152,9 +151,7 @@ public final class AddDocumentDialogFactory
     this.indexOptionsDialogFactory = IndexOptionsDialogFactory.getInstance();
     this.helpDialogFactory = HelpDialogFactory.getInstance();
     this.newFieldList =
-        IntStream.range(0, ROW_COUNT)
-            .mapToObj(i -> NewField.newInstance())
-            .collect(Collectors.toList());
+        IntStream.range(0, ROW_COUNT).mapToObj(i -> NewField.newInstance()).toList();
 
     operatorRegistry.register(AddDocumentDialogOperator.class, this);
     indexHandler.addObserver(new Observer());
@@ -388,7 +385,7 @@ public final class AddDocumentDialogFactory
               .filter(nf -> !nf.isDeleted())
               .filter(nf -> !StringUtils.isNullOrEmpty(nf.getName()))
               .filter(nf -> !StringUtils.isNullOrEmpty(nf.getValue()))
-              .collect(Collectors.toList());
+              .toList();
       if (validFields.isEmpty()) {
         infoTA.setText("Please add one or more fields. Name and Value are both required.");
         return;
@@ -411,7 +408,6 @@ public final class AddDocumentDialogFactory
       log.info("Added document: " + doc);
     }
 
-    @SuppressWarnings("unchecked")
     private IndexableField toIndexableField(NewField nf) throws Exception {
       final Constructor<? extends IndexableField> constr;
       if (nf.getType().equals(TextField.class) || nf.getType().equals(StringField.class)) {
@@ -461,7 +457,7 @@ public final class AddDocumentDialogFactory
             operatorRegistry
                 .get(AnalysisTabOperator.class)
                 .map(AnalysisTabOperator::getCurrentAnalyzer)
-                .orElse(new StandardAnalyzer());
+                .orElseGet(StandardAnalyzer::new);
         toolsModel.addDocument(doc, analyzer);
         indexHandler.reOpen();
         operatorRegistry
@@ -505,9 +501,9 @@ public final class AddDocumentDialogFactory
       OPTIONS("Options", 3, String.class),
       VALUE("Value", 4, String.class);
 
-      private String colName;
-      private int index;
-      private Class<?> type;
+      private final String colName;
+      private final int index;
+      private final Class<?> type;
 
       Column(String colName, int index, Class<?> type) {
         this.colName = colName;
@@ -589,7 +585,7 @@ public final class AddDocumentDialogFactory
 
   static final class OptionsCellRenderer implements TableCellRenderer {
 
-    private JDialog dialog;
+    private final JDialog dialog;
 
     private final IndexOptionsDialogFactory indexOptionsDialogFactory;
 
@@ -609,7 +605,6 @@ public final class AddDocumentDialogFactory
     }
 
     @Override
-    @SuppressWarnings("unchecked")
     public Component getTableCellRendererComponent(
         JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {
       if (table != null && this.table != table) {
@@ -635,9 +630,7 @@ public final class AddDocumentDialogFactory
                             title,
                             500,
                             500,
-                            (factory) -> {
-                              factory.setNewField(newFieldList.get(row));
-                            });
+                            (factory) -> factory.setNewField(newFieldList.get(row)));
                   }
                 }
               });
